--- a/model.ipynb
+++ b/model.ipynb
@@ -187,9 +187,10 @@
     "preprocessing_pipeline_model = pipeline.fit(dfs_skytrax)\n",
     "dfs_skytrax = preprocessing_pipeline_model.transform(dfs_skytrax)\n",
     "\n",
-    "\n",
+    "# Split the data to test and train\n",
     "train, test= dfs_skytrax.randomSplit([0.8, 0.2], seed=42)\n",
     "\n",
+    "# Specify the model and fit it to train data\n",
     "rf = RandomForestClassifier(featuresCol = 'features', labelCol = 'labelIndex')\n",
     "rfModel = rf.fit(train)"
    ]
@@ -224,8 +225,8 @@
     }
    ],
    "source": [
-    "\n",
-    "def uploadDirectory(path):\n",
+    "# Create a function that saves to s3 bucket\n",
+    "def upload_directory(path):\n",
     "    session = boto3.Session(\n",
     "        aws_access_key_id='AKIA2X2ER6BK2I4N3NO4',\n",
     "        aws_secret_access_key='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'\n",
@@ -240,7 +241,7 @@
     "\n",
     "\n",
     "rfModel.write().overwrite().save('model')\n",
-    "uploadDirectory('model')\n"
+    "upload_directory('model')\n"
    ]
   },
   {
@@ -272,6 +273,7 @@
     }
    ],
    "source": [
+    "# Make predictions on test data\n",
     "predictions = rfModel.transform(test)\n",
     "predictions.select('labelIndex', 'rawPrediction', 'prediction', 'probability').show(10)\n"
    ]
@@ -292,6 +294,7 @@
     }
    ],
    "source": [
+    "# Evaluate the model based on accuracy\n",
     "evaluator = MulticlassClassificationEvaluator(labelCol=\"labelIndex\", predictionCol=\"prediction\")\n",
     "accuracy = evaluator.evaluate(predictions)\n",
     "print(\"Accuracy = %s\" % (accuracy))\n",
@@ -314,6 +317,7 @@
     }
    ],
    "source": [
+    "# Create confusion matrix\n",
     "preds_and_labels = predictions.select(['prediction','labelIndex']).withColumn('labelIndex', F.col('labelIndex').cast(FloatType())).orderBy('prediction')\n",
     "preds_and_labels = preds_and_labels.select(['prediction','labelIndex'])\n",
     "metrics = MulticlassMetrics(preds_and_labels.rdd.map(tuple))\n",
